--- a/css/styless.css
+++ b/css/styless.css
@@ -142,4 +142,51 @@ ul#navegacao a:hover{
 
 #rodape{
     clear: both;
+    padding: 16px;
+    background: #fff url(../img/bg-rodape.png) top repeat-x;
+    color: #7d7640;
 }
+
+/* Formatações de texto */
+
+h2{
+    color: #7d7640;
+    font-size: 1.1em;
+    padding: 5px 0;
+}
+
+p{
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
+/* Formatando lista lateral */
+
+#beneficios li{
+    padding: 8px;
+    border-bottom: 1px solid #f3efcb;
+    height: 6em;
+}
+
+#beneficios li a img{
+    float: left;
+    margin-right: 8px;
+}
+
+#beneficios li a p{
+    font-size: 0.8em;
+    color: #000;
+}
+
+#beneficios li a h3{
+    color: #615b2d;
+    padding: 5px 0;
+    font-size: 1em;
+    background: url(../img/ornamento.png) no-repeat center right;
+}
+
+#beneficios li:hover{
+    background: #f6f3d6;
+    cursor: pointer;
+}
+
